# EUI-SAIS

./: CMakeLists.txt  README.md  RUN.bat  main.c  resource.rc
DataBases/: Admin_DataBase.csv  Student_DataBase.csv  courses.txt
Functions_Files/Navigation_Functions/Headers/: Admin_Dashboard.h  Login_Screen.h  Press_Key_Back.h  Student_Dashboard.h
Functions_Files/Navigation_Functions/src/: Admin_Dashboard.c  Login_Screen.c  Press_Key_Back.c  Student_Dashboard.c
Functions_Files/User_Functions/: LinkedLists.c  LinkedLists.h  User_Struct.h
Functions_Files/User_Functions/Admin_Functions/Headers/: Admin.h  Admin_Courses.h
Functions_Files/User_Functions/Admin_Functions/src/: Add_Passed_Manual.c  Admin.c  Admin_Courses.c  Admin_Login.c  Student_Add.c
Functions_Files/User_Functions/Student_Functions/Headers/: Student.h  Student_Courses.h  view_passed_courses.h  view_registered_courses.h
Functions_Files/User_Functions/Student_Functions/src/: Student.c  Student_Courses.c  Student_Login.c  view_passed_courses.c  view_registered_courses.c
